--- a/Styles.css
+++ b/Styles.css
@@ -9,7 +9,7 @@ body{
 
 #flex{
     display: flex;
-    flex-shrink: 2;
+    flex-wrap: nowrap;
     height: 100vh;
     width: 100vw;
     
@@ -22,7 +22,7 @@ body{
     top: 10%;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 3rem;
+    font-size: 5vw;
     color: #05868f;
 
 
@@ -32,6 +32,7 @@ body{
     top: 80%;
     left: 50%;
     transform: translate(-50%,-50%);
+    font-size:16px;
 
 }
 
@@ -55,8 +56,8 @@ body{
 }
 
 .item{
-    width: 250px;
-    height: 250px;
+    width: 10vw;
+    height: 10vw;
     margin: 10px;
     border-radius: 20px;
 }
